[package]
name = "userprompt_derive"
version = "0.0.4"
edition = "2021"
description = "The derive library for the userprompt crate. Derives prompt traits"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.55"

[lib]
proc-macro = true

[features]
egui = [ ]